[package]
name = "rust-ffmpeg-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
indicatif = "0.18.4"
rayon = "1.11.0"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
